deploy/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: idpam-demo
  labels:
    domus.land/organization: domus-land
    domus.land/environment: production-demo
