deploy/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idpam-demo
spec:
  selector:
    app.kubernetes.io/name: idpam-demo
  ports:
    - name: http
      port: 3000
      targetPort: http
    - name: dex
      port: 5556
      targetPort: dex
